fix modal height size on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1115,6 +1115,14 @@ section {
       max-height: 100%; // Increase max height for mobile
       margin-top: 50px;
     }
+    @media (max-height: 600px) {
+      width: 100%;
+      max-height: 500px;
+      padding: 0.5em;
+      font-size: 0.9em;
+      max-height: 80%; // Increase max height for mobile
+      margin-top: 50px;
+    }
 
     display: flex;
     flex-direction: column;
@@ -1140,7 +1148,6 @@ section {
     border: none;
     position: absolute;
     @media (max-width: 1024px) {
-      max-height: 500px;
       width: 95vw;
       height: max-content;
       font-size: 0.75em;
